--- a/windows/windows.vcxproj
+++ b/windows/windows.vcxproj
@@ -76,6 +76,7 @@
     <LinkIncremental>true</LinkIncremental>
     <IncludePath>C:\Users\manix\coderoot\SDL2-2.0.4\include;C:\Users\manix\coderoot\SDL2_image-2.0.1\include;$(IncludePath)</IncludePath>
     <LibraryPath>C:\Users\manix\coderoot\SDL2_image-2.0.1\lib\x64;C:\Users\manix\coderoot\SDL2-2.0.4\lib\x64;$(LibraryPath)</LibraryPath>
+    <CodeAnalysisRuleSet>AllRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
@@ -165,6 +166,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\constants.cpp" />
+    <ClCompile Include="..\gameharness.cpp" />
     <ClCompile Include="..\main.cpp" />
     <ClCompile Include="..\sprite.cpp" />
     <ClCompile Include="..\tiledmap.cpp" />
@@ -172,6 +174,8 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\constants.h" />
+    <ClInclude Include="..\include\gameharness.h" />
+    <ClInclude Include="..\include\maze.h" />
     <ClInclude Include="..\include\sprite.h" />
     <ClInclude Include="..\include\spriteanimation.h" />
     <ClInclude Include="..\include\tiledmap.h" />
